[project]
name = "origin"
version = "0.1.0"
description = "Option price distribution tools."
authors = [
    {name = "Armaan Hussain", email = "armaancfc7@gmail.com"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Quantitative Analysts",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
keywords = ["options", "implied volatility", "probability", "distribution"]
dependencies = [
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "six>=1.17.0",
    "tzdata>=2025.1",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "fonttools>=4.56.0",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.1",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "pyparsing>=3.2.1",
    "yfinance>=0.2.55",
]

[project.urls]
"GitHub" = "https://github.com/armaanPy"
"Homepage" = "https://github.com/armaanPy/origin"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
